--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,18 +1,12 @@
-name: Tachyon
+name: TachyonRefreshed
 version: '1.0'
 main: es.redactado.tachyonRefreshed.TachyonLibrary
 api-version: '1.13'
 description: A high-performance schematic library using PacketEvents and Guice
-author: redactado
+author: Redactado
 website: https://github.com/redactado/Tachyon-paper
 
 libraries:
   - io.github.retrooper.packetevents:spigot:2.2.0
   - com.google.inject:guice:7.0.0
   - com.google.inject.extensions:guice-assistedinject:7.0.0
-
-commands:
-  schematic:
-    description: Schematic manipulation command
-    usage: /schematic <pos1|pos2|copy|save|load|paste|rotate|flip> [filename]
-    aliases: [schem]
