--- a/build.gradle
+++ b/build.gradle
@@ -44,17 +44,16 @@ java.sourceCompatibility = JavaVersion.VERSION_21
 
 publishing {
     publications {
-        release(MavenPublication) {
+        maven(MavenPublication) {
+            from components.java
+
             groupId = 'com.github.Reddishye'
             artifactId = 'TachyonRefreshed'
-            version = version
-
-            afterEvaluate {
-                from components.release
-            }
+            version = '1.0.0'
         }
     }
 }
+
 shadowJar {
     archiveBaseName.set('Tachyon')
     archiveClassifier.set('')
