--- a/build.gradle
+++ b/build.gradle
@@ -38,16 +38,28 @@ version = '1.0'
 description = 'TachyonRefreshed'
 java.sourceCompatibility = JavaVersion.VERSION_21
 
+java {
+    withSourcesJar()
+    withJavadocJar()
+}
+
 publishing {
     publications {
         maven(MavenPublication) {
             from components.java
-
-            groupId = project.group
-            artifactId = project.name
-            version = project.version
         }
     }
+}
+
+sourceSets.configureEach { set ->
+    artifacts {
+        archives shadowJar
+    }
+}
+
+wrapper {
+    gradleVersion = "8.10"
+    distributionType = Wrapper.DistributionType.ALL
 }
 
 shadowJar {
@@ -66,6 +78,6 @@ tasks.withType(Javadoc) {
     options.encoding = 'UTF-8'
 }
 
-artifacts {
-    archives shadowJar
+jar {
+    from shadowJar.outputs
 }
