--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ plugins {
     id 'com.gradleup.shadow' version '9.0.0-beta4'
 }
 
+apply plugin: 'maven-publish'
+
 repositories {
     mavenLocal()
     maven {
@@ -43,13 +45,15 @@ java {
     withJavadocJar()
 }
 
-publishing {
-    publications {
-        maven(MavenPublication) {
-            groupId = 'com.github.Reddishye'
-            artifactId = 'TachyonRefreshed'
-            version = project.version
-            from components.java
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.github.redactado'
+                artifactId = 'TachyonRefreshed'
+                version = project.version
+            }
         }
     }
 }
