--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,8 @@ java {
 afterEvaluate {
     publishing {
         publications {
-            release(MavenPublication) {
-                from components.release
+            mavenJava(MavenPublication) {
+                from components.java
                 groupId = 'com.github.redactado'
                 artifactId = 'TachyonRefreshed'
                 version = project.version
