--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     id 'com.gradleup.shadow' version '9.0.0-beta4'
+    id 'io.github.gradle.nullaway' version '1.3.0' apply false
 }
 
 apply plugin: 'maven-publish'
@@ -24,6 +25,9 @@ repositories {
     maven {
         name = "papermc"
         url = uri("https://repo.papermc.io/repository/maven-public/")
+    }
+    maven {
+        url = uri('https://plugins.gradle.org/m2/')
     }
 }
 
