--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,9 @@ libraries/*.jar
 *.tar.gz
 *.rar
 
+# exclude wrapper
+!gradle-wrapper.jar
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 Enterprise/libs/Lotusas
