Update to use com.github.Reddishye

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: TachyonRefreshed
 version: '1.0'
-main: es.redactado.tachyonRefreshed.TachyonLibrary
+main: com.github.Reddishye.tachyonRefreshed.TachyonLibrary
 api-version: '1.21'
 description: A high-performance schematic library using PacketEvents and Guice
 author: Redactado
