--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'com.google.inject.extensions:guice-assistedinject:7.0.0'
 }
 
-group = 'com.github.redactado'
+group = 'com.github.Reddishye'
 version = '1.0'
 description = 'TachyonRefreshed'
 java.sourceCompatibility = JavaVersion.VERSION_21
